--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -2,17 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    def ext = rootProject.extensions.getByName("ext")
+
+    compileSdkVersion ext["androidCompileSdkVersion"]
+    buildToolsVersion ext["androidBuildToolsVersion"]
 
     defaultConfig {
-        applicationId "test.coding.fuse.fusemobile"
-        minSdkVersion 10
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        applicationId ext['androidApplicationId']
+        minSdkVersion ext['androidMinSdkVersion']
+        targetSdkVersion ext['androidTargetSdkVersion']
+        versionCode ext['androidVersionCode']
+        versionName ext['androidVersionName']
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner ext['testInstrumentationRunner']
     }
     buildTypes {
         release {
@@ -23,25 +25,23 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
-    // Dagger 2
     compile 'com.google.dagger:dagger:2.0.1'
     apt "com.google.dagger:dagger-compiler:2.0.1"
     compile 'javax.annotation:jsr250-api:1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'io.reactivex:rxandroid:1.0.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
     compile 'io.reactivex:rxjava:1.0.15'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestCompile 'com.android.support.test:runner:0.4.1'
     androidTestCompile 'com.android.support:support-annotations:23.1.0'
     androidTestCompile "org.mockito:mockito-core:1.+"
     androidTestCompile 'com.google.dexmaker:dexmaker-mockito:1.+'
+    testCompile 'junit:junit:4.12'
+
     compile project(':domain')
     compile project(':data')
 }
